--- a/match/templates/personalMatching/personal.html
+++ b/match/templates/personalMatching/personal.html
@@ -9,11 +9,11 @@
 <style>
     .nav-justified {
         display: flex;
-        justify-content: space-around;
+        flex-direction: row;
         align-items: center;
         font-weight: bold;
         box-sizing: content-box;
-        font-size: 0.70rem;
+        font-size: 0.75rem;
         color: #8c8c8c;
         background: #e1e1e1;
         border-radius: 2px;
@@ -22,6 +22,8 @@
         position: relative;
         box-sizing: content-box;
         padding: 0.7rem 0rem;
+        text-align: center;
+        width:25%;
     }
     .nav-justified > .item.active {
         color: #131313;
@@ -672,14 +674,14 @@
 </script>
 
 
-    <div style="display: flex; flex-direction: row; justify-content: space-between;">
-        <button type="button" class="btn move" style="margin-left:0; width: 13%; padding: 0;" onclick="prevWeek()">
+    <div style="display: flex; flex-direction: row;">
+        <button type="button" class="btn move" style="display:inline-block; margin-left:0; width: 10%; padding: 0;" onclick="prevWeek()">
             <i class="fas fa-long-arrow-alt-left" style="color:#28AAE3;"></i>
         </button>
-        <table id="chooseDate" boarder="3" text-align="center" style="padding:3em; width: 70%;">
+        <table id="chooseDate" boarder="3" text-align="center" style="width: 80%;">
             
         </table>
-        <button type="button" class="btn move" style="width: 13%; padding: 0;" onclick="nextWeek()">
+        <button type="button" class="btn move" style="width: 10%; display:inline-block;" onclick="nextWeek()">
             <i class="fas fa-long-arrow-alt-right" style="color:#28AAE3;"></i>
         </button>
     </div>
